# rust-wasm-webrtc-bittorrent-like-file-sharing-example

./: README.md  watch.sh
client/: Cargo.toml
client/src/: app.rs  app_ui.rs  callback.rs  connection.rs  file.rs  file_ui.rs  html.rs  interval_handler.rs  main.rs  message.rs  params.rs  peer.rs  peer_ui.rs  sender.rs  time.rs  tracker.rs  upwrap_or.rs
peer/: Cargo.toml  index.html
peer/src/: callback.rs  file.rs  file_chunk.rs  file_meta_data.rs  file_metadata.rs  file_piece.rs  file_pieces_queues.rs  file_sharing_selector.rs  file_sharing_state.rs  file_state.rs  ignore_empty.rs  interval_handler.rs  js_rand.rs  js_time.rs  lib.rs  local_file.rs  local_peer.rs  message.rs  message_fmt.rs  object_url.rs  ok_or_log.rs  params.rs  peer_sender.rs  remote_peer.rs  scheduler.rs  shared_file.rs  tracker.rs  vec_ext.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: app.rs  main.rs  server.rs  socket.rs  socket_receiver.rs  socket_sender.rs  state.rs
tracker/: Cargo.toml
tracker-protocol/: Cargo.toml
tracker-protocol/src/: lib.rs
tracker/src/: lib.rs  socket.rs  socket_receiver.rs  socket_sender.rs  state.rs  tracker.rs
