[package]
name = "client"
version = "0.0.1"
edition = "2021"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
# TODO: Remove unused deps
async-std = "1.10.0"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
hex = "0.4.3"
js-sys = "0.3.53"
log = "0.4.14"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = "1.0.130"
sha2 = "0.9.8"
static_assertions = "1.1.0"
thiserror = "1.0.30"
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.26"

[dependencies.bitvec]
version = "0.22.3"
features = [
    "serde"
]

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dependencies.web-sys]
version = "0.3.54"
features = [
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "Document",
    "DomTokenList",
    "Element",
    "File",
    "FileList",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlSpanElement",
    "InputEvent",
    "MessageChannel",
    "MessageEvent",
    "MessagePort",
    "MouseEvent",
    "NodeList",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcDataChannelType",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcIceServer",
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcRtpSender",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSignalingState",
    "Text",
    "TrackEvent",
    "Url",
    "WebSocket",
    "Window",
]

[dependencies.tracker-protocol]
path = "../tracker-protocol"

[dependencies.peer]
path = "../peer"

[features]
default = ["wee_alloc"]
