[package]
name = "peer"
version = "0.0.1"
edition = "2021"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
# TODO: Remove unused deps
async-std = "1.10.0"
base64 = "0.13.0"
bincode = "1.3.3"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
derive_more = "0.99.16"
fxhash = "0.2.1"
hex = "0.4.3"
js-sys = "0.3.53"
log = "0.4.14"
nonmax = "0.5.0"
owning_ref = "0.4.1"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = "1.0.130"
sha2 = "0.9.8"
static_assertions = "1.1"
thiserror = "1.0.30"
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.26"

[dependencies.bitvec]
version = "0.22.3"
features = [
    "serde"
]

[dependencies.getrandom]
version = "0.2.3"
features = [
    "js"
]

[dependencies.web-sys]
version = "0.3.54"
features = [
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "Document",
    "DomTokenList",
    "Element",
    "File",
    "FileList",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlSpanElement",
    "InputEvent",
    "MessageChannel",
    "MessageEvent",
    "MessagePort",
    "MouseEvent",
    "Performance",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcDataChannelType",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcIceServer",
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcRtpSender",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSignalingState",
    "Text",
    "TrackEvent",
    "Url",
    "WebSocket",
    "Window",
]

[dependencies.tracker-protocol]
path = "../tracker-protocol"
