[package]
name = "tracker"
version = "0.0.1"
edition = "2021"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
async-std = "1.10.0"
async-tungstenite = "0.15.0"
bincode = "1.3.3"
futures = "0.3.17"
log = "0.4.14"
thiserror = "1.0.30"

[dependencies.tracker-protocol]
path = "../tracker-protocol"
